// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationRepositories render() with a provider renders 1`] = `
<OrganizationRepositories
  params={
    Object {
      "orgId": "org-slug",
    }
  }
>
  <DocumentTitle
    title="Repositories"
  >
    <HomeContainer
      params={
        Object {
          "orgId": "org-slug",
        }
      }
    >
      <div
        className=" organization-home"
      >
        <div
          className="sub-header flex flex-container flex-vertically-centered"
        >
          <div>
            <ProjectSelector
              organization={
                Object {
                  "access": Array [
                    "org:read",
                    "org:write",
                    "org:admin",
                    "project:read",
                    "project:write",
                    "project:admin",
                    "team:read",
                    "team:write",
                    "team:admin",
                  ],
                  "features": Array [],
                  "id": "3",
                  "name": "Organization Name",
                  "onboardingTasks": Array [],
                  "slug": "org-slug",
                  "teams": Array [],
                }
              }
              projectId={null}
            >
              <div
                className="project-select"
              >
                <h3>
                  <Link
                    className="home-crumb"
                    to="/org-slug/"
                  >
                    <Link
                      className="home-crumb"
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/org-slug/"
                    >
                      <a
                        className="home-crumb"
                        onClick={[Function]}
                        style={Object {}}
                      >
                        <span
                          className="icon-home"
                        />
                      </a>
                    </Link>
                  </Link>
                  Select a project
                  <DropdownLink
                    anchorRight={false}
                    caret={true}
                    disabled={false}
                    onClose={[Function]}
                    onOpen={[Function]}
                    title=""
                    topLevelClasses="project-dropdown is-empty"
                  >
                    <span
                      className="project-dropdown is-empty dropdown"
                    >
                      <a
                        className="dropdown-toggle"
                        data-toggle="dropdown"
                      >
                        <i
                          className="icon-arrow-down"
                        />
                      </a>
                      <ul
                        className="dropdown-menu"
                      >
                        <MenuItem
                          className="empty-projects-item"
                          noAnchor={true}
                        >
                          <li
                            className="empty-projects-item"
                            href={null}
                            role="presentation"
                            title={null}
                          >
                            <div
                              className="empty-message"
                            >
                              You have no projects.
                            </div>
                          </li>
                        </MenuItem>
                        <MenuItem
                          divider={true}
                        >
                          <li
                            className="divider"
                            href={null}
                            role="presentation"
                            title={null}
                          />
                        </MenuItem>
                        <MenuItem
                          className="empty-projects-item"
                          noAnchor={true}
                        >
                          <li
                            className="empty-projects-item"
                            href={null}
                            role="presentation"
                            title={null}
                          >
                            <a
                              className="btn btn-primary btn-block"
                              href="/organizations/org-slug/projects/new/"
                            >
                              Create project
                            </a>
                          </li>
                        </MenuItem>
                      </ul>
                    </span>
                  </DropdownLink>
                </h3>
              </div>
            </ProjectSelector>
          </div>
          <div
            className="align-right hidden-xs"
          >
            <Button
              disabled={false}
              priority="primary"
              style={
                Object {
                  "marginRight": 5,
                }
              }
              to="/organizations/org-slug/projects/new/"
            >
              <Link
                className="button button-primary"
                disabled={false}
                onClick={[Function]}
                onlyActiveOnIndex={false}
                role="button"
                style={
                  Object {
                    "marginRight": 5,
                  }
                }
                to="/organizations/org-slug/projects/new/"
              >
                <a
                  className="button button-primary"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  style={
                    Object {
                      "marginRight": 5,
                    }
                  }
                >
                  New Project
                </a>
              </Link>
            </Button>
            <Button
              disabled={false}
              priority="primary"
              to="/organizations/org-slug/teams/new/"
            >
              <Link
                className="button button-primary"
                disabled={false}
                onClick={[Function]}
                onlyActiveOnIndex={false}
                role="button"
                style={Object {}}
                to="/organizations/org-slug/teams/new/"
              >
                <a
                  className="button button-primary"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  style={Object {}}
                >
                  New Team
                </a>
              </Link>
            </Button>
          </div>
        </div>
        <div
          className="container"
        >
          <div
            className="content row"
          >
            <div
              className="col-md-2 org-sidebar"
            >
              <HomeSidebar>
                <div>
                  <h6
                    className="nav-header"
                  >
                    Organization
                  </h6>
                  <ul
                    className="nav nav-stacked"
                  >
                    <ListLink
                      activeClassName="active"
                      index={false}
                      isActive={[Function]}
                      to="/org-slug/"
                    >
                      <li
                        className=""
                      >
                        <Link
                          onlyActiveOnIndex={false}
                          style={Object {}}
                          to="/org-slug/"
                        >
                          <a
                            onClick={[Function]}
                            style={Object {}}
                          >
                            Dashboard
                          </a>
                        </Link>
                      </li>
                    </ListLink>
                    <ListLink
                      activeClassName="active"
                      index={false}
                      isActive={[Function]}
                      to="/organizations/org-slug/teams/"
                    >
                      <li
                        className=""
                      >
                        <Link
                          onlyActiveOnIndex={false}
                          style={Object {}}
                          to="/organizations/org-slug/teams/"
                        >
                          <a
                            onClick={[Function]}
                            style={Object {}}
                          >
                            Projects & Teams
                          </a>
                        </Link>
                      </li>
                    </ListLink>
                    <ListLink
                      activeClassName="active"
                      index={false}
                      to="/organizations/org-slug/stats/"
                    >
                      <li
                        className=""
                      >
                        <Link
                          onlyActiveOnIndex={false}
                          style={Object {}}
                          to="/organizations/org-slug/stats/"
                        >
                          <a
                            onClick={[Function]}
                            style={Object {}}
                          >
                            Stats
                          </a>
                        </Link>
                      </li>
                    </ListLink>
                  </ul>
                  <div>
                    <h6
                      className="nav-header with-divider"
                    >
                      Issues
                    </h6>
                    <ul
                      className="nav nav-stacked"
                    >
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/issues/assigned/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/issues/assigned/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Assigned to Me
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/issues/bookmarks/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/issues/bookmarks/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Bookmarks
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/issues/history/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/issues/history/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              History
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                    </ul>
                  </div>
                  <div>
                    <h6
                      className="nav-header with-divider"
                    >
                      Manage
                    </h6>
                    <ul
                      className="nav nav-stacked"
                    >
                      <li>
                        <a
                          href="/organizations/org-slug/members/"
                        >
                          Members
                           
                        </a>
                      </li>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/audit-log/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/audit-log/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Audit Log
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/rate-limits/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/rate-limits/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Rate Limits
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/repos/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/repos/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Repositories
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/settings/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/settings/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Settings
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                    </ul>
                  </div>
                </div>
              </HomeSidebar>
            </div>
            <div
              className="col-md-10"
            >
              <div>
                <div
                  className="pull-right"
                >
                  <DropdownLink
                    anchorRight={true}
                    caret={true}
                    className="btn btn-primary btn-sm"
                    disabled={false}
                    title="Add Repository"
                  >
                    <span
                      className="pull-right anchor-right dropdown"
                    >
                      <a
                        className="btn btn-primary btn-sm dropdown-menu-right dropdown-toggle"
                        data-toggle="dropdown"
                      >
                        Add Repository
                        <i
                          className="icon-arrow-down"
                        />
                      </a>
                      <ul
                        className="dropdown-menu"
                      >
                        <MenuItem
                          noAnchor={true}
                        >
                          <li
                            className=""
                            href={null}
                            role="presentation"
                            title={null}
                          >
                            <AddRepositoryLink
                              onSuccess={[Function]}
                              orgId="org-slug"
                              provider={
                                Object {
                                  "config": Array [
                                    Object {
                                      "help": "Enter your repository name, including the owner.",
                                      "label": "Repository Name",
                                      "name": "name",
                                      "placeholder": "e.g. getsentry/sentry",
                                      "required": true,
                                      "type": "text",
                                    },
                                  ],
                                  "id": "github",
                                  "name": "GitHub",
                                }
                              }
                            >
                              <a
                                onClick={[Function]}
                              >
                                GitHub
                                <Modal
                                  animation={false}
                                  autoFocus={true}
                                  backdrop={true}
                                  bsClass="modal"
                                  dialogComponentClass={[Function]}
                                  enforceFocus={true}
                                  keyboard={true}
                                  manager={
                                    ModalManager {
                                      "containers": Array [],
                                      "data": Array [],
                                      "handleContainerOverflow": true,
                                      "hideSiblingNodes": true,
                                      "modals": Array [],
                                    }
                                  }
                                  onHide={[Function]}
                                  renderBackdrop={[Function]}
                                  restoreFocus={true}
                                  show={false}
                                >
                                  <Modal
                                    autoFocus={true}
                                    backdrop={true}
                                    backdropClassName="modal-backdrop"
                                    backdropTransitionTimeout={150}
                                    containerClassName="modal-open"
                                    dialogTransitionTimeout={300}
                                    enforceFocus={true}
                                    keyboard={true}
                                    manager={
                                      ModalManager {
                                        "containers": Array [],
                                        "data": Array [],
                                        "handleContainerOverflow": true,
                                        "hideSiblingNodes": true,
                                        "modals": Array [],
                                      }
                                    }
                                    onEntering={[Function]}
                                    onExited={[Function]}
                                    onHide={[Function]}
                                    renderBackdrop={[Function]}
                                    restoreFocus={true}
                                    show={false}
                                  />
                                </Modal>
                              </a>
                            </AddRepositoryLink>
                          </li>
                        </MenuItem>
                      </ul>
                    </span>
                  </DropdownLink>
                </div>
                <h3
                  className="m-b-2"
                >
                  Repositories
                </h3>
                <div
                  className="well blankslate align-center p-x-2 p-y-1"
                >
                  <div
                    className="icon icon-lg icon-git-commit"
                  />
                  <h3>
                    Sentry is better with commit data
                  </h3>
                  <p>
                    Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message.
                  </p>
                  <p
                    className="m-b-1"
                  >
                    <a
                      className="btn btn-default"
                      href="https://docs.sentry.io/learn/releases/"
                    >
                      Learn more
                    </a>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </HomeContainer>
  </DocumentTitle>
</OrganizationRepositories>
`;

exports[`OrganizationRepositories render() with a provider renders with a repository 1`] = `
<OrganizationRepositories
  params={
    Object {
      "orgId": "org-slug",
    }
  }
>
  <DocumentTitle
    title="Repositories"
  >
    <HomeContainer
      params={
        Object {
          "orgId": "org-slug",
        }
      }
    >
      <div
        className=" organization-home"
      >
        <div
          className="sub-header flex flex-container flex-vertically-centered"
        >
          <div>
            <ProjectSelector
              organization={
                Object {
                  "access": Array [
                    "org:read",
                    "org:write",
                    "org:admin",
                    "project:read",
                    "project:write",
                    "project:admin",
                    "team:read",
                    "team:write",
                    "team:admin",
                  ],
                  "features": Array [],
                  "id": "3",
                  "name": "Organization Name",
                  "onboardingTasks": Array [],
                  "slug": "org-slug",
                  "teams": Array [],
                }
              }
              projectId={null}
            >
              <div
                className="project-select"
              >
                <h3>
                  <Link
                    className="home-crumb"
                    to="/org-slug/"
                  >
                    <Link
                      className="home-crumb"
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/org-slug/"
                    >
                      <a
                        className="home-crumb"
                        onClick={[Function]}
                        style={Object {}}
                      >
                        <span
                          className="icon-home"
                        />
                      </a>
                    </Link>
                  </Link>
                  Select a project
                  <DropdownLink
                    anchorRight={false}
                    caret={true}
                    disabled={false}
                    onClose={[Function]}
                    onOpen={[Function]}
                    title=""
                    topLevelClasses="project-dropdown is-empty"
                  >
                    <span
                      className="project-dropdown is-empty dropdown"
                    >
                      <a
                        className="dropdown-toggle"
                        data-toggle="dropdown"
                      >
                        <i
                          className="icon-arrow-down"
                        />
                      </a>
                      <ul
                        className="dropdown-menu"
                      >
                        <MenuItem
                          className="empty-projects-item"
                          noAnchor={true}
                        >
                          <li
                            className="empty-projects-item"
                            href={null}
                            role="presentation"
                            title={null}
                          >
                            <div
                              className="empty-message"
                            >
                              You have no projects.
                            </div>
                          </li>
                        </MenuItem>
                        <MenuItem
                          divider={true}
                        >
                          <li
                            className="divider"
                            href={null}
                            role="presentation"
                            title={null}
                          />
                        </MenuItem>
                        <MenuItem
                          className="empty-projects-item"
                          noAnchor={true}
                        >
                          <li
                            className="empty-projects-item"
                            href={null}
                            role="presentation"
                            title={null}
                          >
                            <a
                              className="btn btn-primary btn-block"
                              href="/organizations/org-slug/projects/new/"
                            >
                              Create project
                            </a>
                          </li>
                        </MenuItem>
                      </ul>
                    </span>
                  </DropdownLink>
                </h3>
              </div>
            </ProjectSelector>
          </div>
          <div
            className="align-right hidden-xs"
          >
            <Button
              disabled={false}
              priority="primary"
              style={
                Object {
                  "marginRight": 5,
                }
              }
              to="/organizations/org-slug/projects/new/"
            >
              <Link
                className="button button-primary"
                disabled={false}
                onClick={[Function]}
                onlyActiveOnIndex={false}
                role="button"
                style={
                  Object {
                    "marginRight": 5,
                  }
                }
                to="/organizations/org-slug/projects/new/"
              >
                <a
                  className="button button-primary"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  style={
                    Object {
                      "marginRight": 5,
                    }
                  }
                >
                  New Project
                </a>
              </Link>
            </Button>
            <Button
              disabled={false}
              priority="primary"
              to="/organizations/org-slug/teams/new/"
            >
              <Link
                className="button button-primary"
                disabled={false}
                onClick={[Function]}
                onlyActiveOnIndex={false}
                role="button"
                style={Object {}}
                to="/organizations/org-slug/teams/new/"
              >
                <a
                  className="button button-primary"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  style={Object {}}
                >
                  New Team
                </a>
              </Link>
            </Button>
          </div>
        </div>
        <div
          className="container"
        >
          <div
            className="content row"
          >
            <div
              className="col-md-2 org-sidebar"
            >
              <HomeSidebar>
                <div>
                  <h6
                    className="nav-header"
                  >
                    Organization
                  </h6>
                  <ul
                    className="nav nav-stacked"
                  >
                    <ListLink
                      activeClassName="active"
                      index={false}
                      isActive={[Function]}
                      to="/org-slug/"
                    >
                      <li
                        className=""
                      >
                        <Link
                          onlyActiveOnIndex={false}
                          style={Object {}}
                          to="/org-slug/"
                        >
                          <a
                            onClick={[Function]}
                            style={Object {}}
                          >
                            Dashboard
                          </a>
                        </Link>
                      </li>
                    </ListLink>
                    <ListLink
                      activeClassName="active"
                      index={false}
                      isActive={[Function]}
                      to="/organizations/org-slug/teams/"
                    >
                      <li
                        className=""
                      >
                        <Link
                          onlyActiveOnIndex={false}
                          style={Object {}}
                          to="/organizations/org-slug/teams/"
                        >
                          <a
                            onClick={[Function]}
                            style={Object {}}
                          >
                            Projects & Teams
                          </a>
                        </Link>
                      </li>
                    </ListLink>
                    <ListLink
                      activeClassName="active"
                      index={false}
                      to="/organizations/org-slug/stats/"
                    >
                      <li
                        className=""
                      >
                        <Link
                          onlyActiveOnIndex={false}
                          style={Object {}}
                          to="/organizations/org-slug/stats/"
                        >
                          <a
                            onClick={[Function]}
                            style={Object {}}
                          >
                            Stats
                          </a>
                        </Link>
                      </li>
                    </ListLink>
                  </ul>
                  <div>
                    <h6
                      className="nav-header with-divider"
                    >
                      Issues
                    </h6>
                    <ul
                      className="nav nav-stacked"
                    >
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/issues/assigned/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/issues/assigned/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Assigned to Me
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/issues/bookmarks/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/issues/bookmarks/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Bookmarks
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/issues/history/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/issues/history/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              History
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                    </ul>
                  </div>
                  <div>
                    <h6
                      className="nav-header with-divider"
                    >
                      Manage
                    </h6>
                    <ul
                      className="nav nav-stacked"
                    >
                      <li>
                        <a
                          href="/organizations/org-slug/members/"
                        >
                          Members
                           
                        </a>
                      </li>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/audit-log/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/audit-log/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Audit Log
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/rate-limits/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/rate-limits/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Rate Limits
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/repos/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/repos/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Repositories
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/settings/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/settings/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Settings
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                    </ul>
                  </div>
                </div>
              </HomeSidebar>
            </div>
            <div
              className="col-md-10"
            >
              <div>
                <div
                  className="pull-right"
                >
                  <DropdownLink
                    anchorRight={true}
                    caret={true}
                    className="btn btn-primary btn-sm"
                    disabled={false}
                    title="Add Repository"
                  >
                    <span
                      className="pull-right anchor-right dropdown"
                    >
                      <a
                        className="btn btn-primary btn-sm dropdown-menu-right dropdown-toggle"
                        data-toggle="dropdown"
                      >
                        Add Repository
                        <i
                          className="icon-arrow-down"
                        />
                      </a>
                      <ul
                        className="dropdown-menu"
                      >
                        <MenuItem
                          noAnchor={true}
                        >
                          <li
                            className=""
                            href={null}
                            role="presentation"
                            title={null}
                          >
                            <AddRepositoryLink
                              onSuccess={[Function]}
                              orgId="org-slug"
                              provider={
                                Object {
                                  "config": Array [
                                    Object {
                                      "help": "Enter your repository name, including the owner.",
                                      "label": "Repository Name",
                                      "name": "name",
                                      "placeholder": "e.g. getsentry/sentry",
                                      "required": true,
                                      "type": "text",
                                    },
                                  ],
                                  "id": "github",
                                  "name": "GitHub",
                                }
                              }
                            >
                              <a
                                onClick={[Function]}
                              >
                                GitHub
                                <Modal
                                  animation={false}
                                  autoFocus={true}
                                  backdrop={true}
                                  bsClass="modal"
                                  dialogComponentClass={[Function]}
                                  enforceFocus={true}
                                  keyboard={true}
                                  manager={
                                    ModalManager {
                                      "containers": Array [],
                                      "data": Array [],
                                      "handleContainerOverflow": true,
                                      "hideSiblingNodes": true,
                                      "modals": Array [],
                                    }
                                  }
                                  onHide={[Function]}
                                  renderBackdrop={[Function]}
                                  restoreFocus={true}
                                  show={false}
                                >
                                  <Modal
                                    autoFocus={true}
                                    backdrop={true}
                                    backdropClassName="modal-backdrop"
                                    backdropTransitionTimeout={150}
                                    containerClassName="modal-open"
                                    dialogTransitionTimeout={300}
                                    enforceFocus={true}
                                    keyboard={true}
                                    manager={
                                      ModalManager {
                                        "containers": Array [],
                                        "data": Array [],
                                        "handleContainerOverflow": true,
                                        "hideSiblingNodes": true,
                                        "modals": Array [],
                                      }
                                    }
                                    onEntering={[Function]}
                                    onExited={[Function]}
                                    onHide={[Function]}
                                    renderBackdrop={[Function]}
                                    restoreFocus={true}
                                    show={false}
                                  />
                                </Modal>
                              </a>
                            </AddRepositoryLink>
                          </li>
                        </MenuItem>
                      </ul>
                    </span>
                  </DropdownLink>
                </div>
                <h3
                  className="m-b-2"
                >
                  Repositories
                </h3>
                <div
                  className="m-b-2"
                >
                  <p>
                    Connecting a repository allows Sentry to capture commit data via webhooks. This enables features like suggested assignees and resolving issues via commit message. Once you've connected a repository, you can associate commits with releases via the API.
                     
                    <span>
                      <span>
                        See our 
                      </span>
                      <a
                        href="https://docs.sentry.io/learn/releases/"
                      >
                        <span>
                          documentation
                        </span>
                      </a>
                      <span>
                         for more details.
                      </span>
                    </span>
                  </p>
                </div>
                <div
                  className="panel panel-default"
                >
                  <table
                    className="table"
                  >
                    <tbody>
                      <tr>
                        <td>
                          <strong>
                            repo-name
                          </strong>
                          <br />
                          <small />
                          <small>
                             
                            — 
                            <a
                              href="https://github.com/example/repo-name"
                            >
                              https://github.com/example/repo-name
                            </a>
                          </small>
                        </td>
                        <td
                          style={
                            Object {
                              "width": 60,
                            }
                          }
                        >
                          <button
                            className="btn btn-default btn-xs"
                            onClick={[Function]}
                          >
                            <span
                              className="icon icon-trash"
                            />
                          </button>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </HomeContainer>
  </DocumentTitle>
</OrganizationRepositories>
`;

exports[`OrganizationRepositories render() without any providers is loading when initially rendering 1`] = `
<DocumentTitle
  title="Repositories"
>
  <HomeContainer
    params={
      Object {
        "orgId": "org-slug",
      }
    }
  >
    <div>
      <div
        className="pull-right"
      >
        <DropdownLink
          anchorRight={true}
          caret={true}
          className="btn btn-primary btn-sm"
          disabled={false}
          title="Add Repository"
        />
      </div>
      <h3
        className="m-b-2"
      >
        Repositories
      </h3>
      <div
        className="well blankslate align-center p-x-2 p-y-1"
      >
        <div
          className="icon icon-lg icon-git-commit"
        />
        <h3>
          Sentry is better with commit data
        </h3>
        <p>
          Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message.
        </p>
        <p
          className="m-b-1"
        >
          <a
            className="btn btn-default"
            href="https://docs.sentry.io/learn/releases/"
          >
            Learn more
          </a>
        </p>
      </div>
    </div>
  </HomeContainer>
</DocumentTitle>
`;

exports[`OrganizationRepositories render() without any providers renders 1`] = `
<OrganizationRepositories
  params={
    Object {
      "orgId": "org-slug",
    }
  }
>
  <DocumentTitle
    title="Repositories"
  >
    <HomeContainer
      params={
        Object {
          "orgId": "org-slug",
        }
      }
    >
      <div
        className=" organization-home"
      >
        <div
          className="sub-header flex flex-container flex-vertically-centered"
        >
          <div>
            <ProjectSelector
              organization={
                Object {
                  "access": Array [
                    "org:read",
                    "org:write",
                    "org:admin",
                    "project:read",
                    "project:write",
                    "project:admin",
                    "team:read",
                    "team:write",
                    "team:admin",
                  ],
                  "features": Array [],
                  "id": "3",
                  "name": "Organization Name",
                  "onboardingTasks": Array [],
                  "slug": "org-slug",
                  "teams": Array [],
                }
              }
              projectId={null}
            >
              <div
                className="project-select"
              >
                <h3>
                  <Link
                    className="home-crumb"
                    to="/org-slug/"
                  >
                    <Link
                      className="home-crumb"
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/org-slug/"
                    >
                      <a
                        className="home-crumb"
                        onClick={[Function]}
                        style={Object {}}
                      >
                        <span
                          className="icon-home"
                        />
                      </a>
                    </Link>
                  </Link>
                  Select a project
                  <DropdownLink
                    anchorRight={false}
                    caret={true}
                    disabled={false}
                    onClose={[Function]}
                    onOpen={[Function]}
                    title=""
                    topLevelClasses="project-dropdown is-empty"
                  >
                    <span
                      className="project-dropdown is-empty dropdown"
                    >
                      <a
                        className="dropdown-toggle"
                        data-toggle="dropdown"
                      >
                        <i
                          className="icon-arrow-down"
                        />
                      </a>
                      <ul
                        className="dropdown-menu"
                      >
                        <MenuItem
                          className="empty-projects-item"
                          noAnchor={true}
                        >
                          <li
                            className="empty-projects-item"
                            href={null}
                            role="presentation"
                            title={null}
                          >
                            <div
                              className="empty-message"
                            >
                              You have no projects.
                            </div>
                          </li>
                        </MenuItem>
                        <MenuItem
                          divider={true}
                        >
                          <li
                            className="divider"
                            href={null}
                            role="presentation"
                            title={null}
                          />
                        </MenuItem>
                        <MenuItem
                          className="empty-projects-item"
                          noAnchor={true}
                        >
                          <li
                            className="empty-projects-item"
                            href={null}
                            role="presentation"
                            title={null}
                          >
                            <a
                              className="btn btn-primary btn-block"
                              href="/organizations/org-slug/projects/new/"
                            >
                              Create project
                            </a>
                          </li>
                        </MenuItem>
                      </ul>
                    </span>
                  </DropdownLink>
                </h3>
              </div>
            </ProjectSelector>
          </div>
          <div
            className="align-right hidden-xs"
          >
            <Button
              disabled={false}
              priority="primary"
              style={
                Object {
                  "marginRight": 5,
                }
              }
              to="/organizations/org-slug/projects/new/"
            >
              <Link
                className="button button-primary"
                disabled={false}
                onClick={[Function]}
                onlyActiveOnIndex={false}
                role="button"
                style={
                  Object {
                    "marginRight": 5,
                  }
                }
                to="/organizations/org-slug/projects/new/"
              >
                <a
                  className="button button-primary"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  style={
                    Object {
                      "marginRight": 5,
                    }
                  }
                >
                  New Project
                </a>
              </Link>
            </Button>
            <Button
              disabled={false}
              priority="primary"
              to="/organizations/org-slug/teams/new/"
            >
              <Link
                className="button button-primary"
                disabled={false}
                onClick={[Function]}
                onlyActiveOnIndex={false}
                role="button"
                style={Object {}}
                to="/organizations/org-slug/teams/new/"
              >
                <a
                  className="button button-primary"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  style={Object {}}
                >
                  New Team
                </a>
              </Link>
            </Button>
          </div>
        </div>
        <div
          className="container"
        >
          <div
            className="content row"
          >
            <div
              className="col-md-2 org-sidebar"
            >
              <HomeSidebar>
                <div>
                  <h6
                    className="nav-header"
                  >
                    Organization
                  </h6>
                  <ul
                    className="nav nav-stacked"
                  >
                    <ListLink
                      activeClassName="active"
                      index={false}
                      isActive={[Function]}
                      to="/org-slug/"
                    >
                      <li
                        className=""
                      >
                        <Link
                          onlyActiveOnIndex={false}
                          style={Object {}}
                          to="/org-slug/"
                        >
                          <a
                            onClick={[Function]}
                            style={Object {}}
                          >
                            Dashboard
                          </a>
                        </Link>
                      </li>
                    </ListLink>
                    <ListLink
                      activeClassName="active"
                      index={false}
                      isActive={[Function]}
                      to="/organizations/org-slug/teams/"
                    >
                      <li
                        className=""
                      >
                        <Link
                          onlyActiveOnIndex={false}
                          style={Object {}}
                          to="/organizations/org-slug/teams/"
                        >
                          <a
                            onClick={[Function]}
                            style={Object {}}
                          >
                            Projects & Teams
                          </a>
                        </Link>
                      </li>
                    </ListLink>
                    <ListLink
                      activeClassName="active"
                      index={false}
                      to="/organizations/org-slug/stats/"
                    >
                      <li
                        className=""
                      >
                        <Link
                          onlyActiveOnIndex={false}
                          style={Object {}}
                          to="/organizations/org-slug/stats/"
                        >
                          <a
                            onClick={[Function]}
                            style={Object {}}
                          >
                            Stats
                          </a>
                        </Link>
                      </li>
                    </ListLink>
                  </ul>
                  <div>
                    <h6
                      className="nav-header with-divider"
                    >
                      Issues
                    </h6>
                    <ul
                      className="nav nav-stacked"
                    >
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/issues/assigned/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/issues/assigned/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Assigned to Me
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/issues/bookmarks/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/issues/bookmarks/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Bookmarks
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/issues/history/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/issues/history/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              History
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                    </ul>
                  </div>
                  <div>
                    <h6
                      className="nav-header with-divider"
                    >
                      Manage
                    </h6>
                    <ul
                      className="nav nav-stacked"
                    >
                      <li>
                        <a
                          href="/organizations/org-slug/members/"
                        >
                          Members
                           
                        </a>
                      </li>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/audit-log/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/audit-log/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Audit Log
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/rate-limits/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/rate-limits/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Rate Limits
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/repos/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/repos/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Repositories
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                      <ListLink
                        activeClassName="active"
                        index={false}
                        to="/organizations/org-slug/settings/"
                      >
                        <li
                          className=""
                        >
                          <Link
                            onlyActiveOnIndex={false}
                            style={Object {}}
                            to="/organizations/org-slug/settings/"
                          >
                            <a
                              onClick={[Function]}
                              style={Object {}}
                            >
                              Settings
                            </a>
                          </Link>
                        </li>
                      </ListLink>
                    </ul>
                  </div>
                </div>
              </HomeSidebar>
            </div>
            <div
              className="col-md-10"
            >
              <div>
                <div
                  className="pull-right"
                >
                  <DropdownLink
                    anchorRight={true}
                    caret={true}
                    className="btn btn-primary btn-sm"
                    disabled={false}
                    title="Add Repository"
                  >
                    <span
                      className="pull-right anchor-right dropdown"
                    >
                      <a
                        className="btn btn-primary btn-sm dropdown-menu-right dropdown-toggle"
                        data-toggle="dropdown"
                      >
                        Add Repository
                        <i
                          className="icon-arrow-down"
                        />
                      </a>
                      <ul
                        className="dropdown-menu"
                      />
                    </span>
                  </DropdownLink>
                </div>
                <h3
                  className="m-b-2"
                >
                  Repositories
                </h3>
                <div
                  className="well blankslate align-center p-x-2 p-y-1"
                >
                  <div
                    className="icon icon-lg icon-git-commit"
                  />
                  <h3>
                    Sentry is better with commit data
                  </h3>
                  <p>
                    Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message.
                  </p>
                  <p
                    className="m-b-1"
                  >
                    <a
                      className="btn btn-default"
                      href="https://docs.sentry.io/learn/releases/"
                    >
                      Learn more
                    </a>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </HomeContainer>
  </DocumentTitle>
</OrganizationRepositories>
`;
